--- a/app/src/main/res/layout/activity_pattern.xml
+++ b/app/src/main/res/layout/activity_pattern.xml
@@ -87,4 +87,15 @@
         app:layout_constraintBottom_toTopOf="@+id/btn10"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/btPatternBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.222" />
+
 </android.support.constraint.ConstraintLayout>
