--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -26,16 +26,22 @@
         android:id="@+id/btAddContact"
         android:layout_width="65dp"
         android:layout_height="68dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="191dp"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <Button
         android:id="@+id/btToPattern"
         android:layout_width="65dp"
         android:layout_height="68dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_gravity="top|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginBottom="182dp"
+        android:layout_marginEnd="125dp"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
